lang/derive/tests/ui/fail/01-empty-struct.rs
use liquid_lang as liquid;

use liquid::InOut;
#[derive(InOut)]
struct MyStruct {}

fn main() {}
