lang/derive/tests/ui/fail/01-empty-struct.stderr
error: empty structs are not supported
 --> $DIR/01-empty-struct.rs:5:1
  |
5 | struct MyStruct {}
  | ^^^^^^^^^^^^^^^^^^
